# nifty

./: .gitmodules  CMakeLists.txt  build_conda.sh  check_linkages.py  two_pass_agglomeration.py
cmake/modules/: FindVIGRA.cmake
conda-recipe/: meta.yaml
include/nifty/distributed/: distributed_graph.hxx  graph_extraction.hxx  graph_tools.hxx  mergeable_features.hxx
include/nifty/features/: fastfilters_wrapper.hxx
include/nifty/graph/: edge_contraction_graph.hxx  edge_weighted_watersheds.hxx  light_graph.hxx  node_weighted_watersheds.hxx  undirected_list_graph.hxx  undirected_long_range_grid_graph.hxx
include/nifty/graph/agglo/: agglomerative_clustering.hxx
include/nifty/graph/multicut/: multicut_visitor_base.hxx
include/nifty/graph/optimization/: visitor_base.hxx
include/nifty/graph/rag/: feature_functors.hxx  grid_rag.hxx  grid_rag_accumulate.hxx  grid_rag_accumulate_filters.hxx  grid_rag_accumulate_from_bounding_boxes.hxx  grid_rag_chunked.hxx  grid_rag_edge_coordinates.hxx  grid_rag_extract_subvolume.hxx  grid_rag_features.hxx  grid_rag_features_chunked.hxx  grid_rag_features_hdf5.hxx  grid_rag_hdf5.hxx  grid_rag_labels_chunked.hxx  grid_rag_paths.hxx  grid_rag_stacked_2d.hxx  project_to_pixels.hxx  project_to_pixels_chunked.hxx  project_to_pixels_hdf5.hxx  vigra_accumulator.hxx
include/nifty/hdf5/: hdf5.hxx  hdf5_array.hxx  hdf5_tools.hxx
include/nifty/histogram/: histogram.hxx
include/nifty/malis/: malis.hxx
include/nifty/marray/: marray.hxx
include/nifty/math/: numerics.hxx
include/nifty/pipelines/ilastik_backend/: batch_prediction_task.hxx  feature_computation.hxx  feature_computation_task.hxx  interactive_classification_task.hxx  interactive_pixel_classification.hxx  random_forest_3_loader.hxx  random_forest_loader.hxx  random_forest_prediction.hxx  (+2 more)
include/nifty/python/: converter.hxx
include/nifty/region_growing/: edge_based_watershed.hxx  tmp.h5  zwatershed.hxx
include/nifty/skeletons/: evaluation.hxx  helper.hxx  skeleton_graph.hxx  teasar.hxx
include/nifty/tools/: priority_queue.hxx
include/nifty/ufd/: ufd.hxx
src/python/lib/: CMakeLists.txt  nifty.cxx
src/python/lib/region_growing/: CMakeLists.txt  edge_based_watershed.cxx  region_growing.cxx  zwatershed.cxx
src/python/module/: __init__.py
src/python/test/: test_hdf5.py
src/test/: CMakeLists.txt
src/test/test_features/: test_fastfilters_wrapper.cxx
src/test/test_graph/: CMakeLists.txt
src/test/test_pipelines/: CMakeLists.txt  test_batch_prediction.cxx  test_ilastik_pixel_classification.cxx  test_interactive_classification.cxx  test_load_rf.cxx  test_load_rf3.cxx
src/test/test_regiongrowing/: CMakeLists.txt  test_edge_based_watershed.cxx
(+69 files in other folders)
